# Rosewatch

./: .gitignore  CMakeLists.txt  build.sh  kill.sh  launch.sh  makefile
assets/: crt.fs  crt_100.fs  crt_100.vs  crt_330.fs  crt_330.vs
assets/themes/: terminal.json
include/api/: app_interface.h
include/shared/: app_api.h  gui.h
include/shared/lib/: gui_types.h  raylib_clay_types.h
scripts/: init.sh  launch.sh
src/apps/: CMakeLists.txt
src/apps/calc/: CMakeLists.txt  calc.cpp
src/apps/camera/: CMakeLists.txt  camera.cpp
src/shell/: CMakeLists.txt  main.cpp
src/shell/shared/: app_api.cpp  clay_renderer_raylib.c  gui.cpp
src/shell/sys/: global.cpp  global.h  runtime_app.cpp  runtime_app.h
src/shell/sys_apps/: drawer.cpp  drawer.h  home.cpp  home.h  shell.cpp  shell.h
